--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 .soundboard {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 100px;
+    grid-template-rows: 100px;
     grid-gap: 10px;
 }
 
@@ -22,10 +22,10 @@ h1 {
 
 #b2 {
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 1;
 }
 
 #b3 {
     grid-column: 3;
-    grid-row: 3;
+    grid-row: 1;
 }
