--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 
 .soundboard {
     display: grid;
-    grid-template-columns: .75fr .75fr .75fr;
+    grid-template-columns: 30% 30% 30%;
     grid-template-rows: 100px;
     grid-gap: 10px;
 }
