--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h1 {
     grid-template-columns: 30% 30% 30%;
     grid-template-rows: 100px;
     grid-gap: 10px;
+    border-radius: 15px;
+    padding: 20px 20px;
 }
 
 #b1 {
