--- a/style.css
+++ b/style.css
@@ -20,16 +20,19 @@ h1 {
 }
 
 #b1 {
+    background-color: #ABDAFC;
     grid-column: 1;
     grid-row: 1;
 }
 
 #b2 {
+    background-color: #DEA6A8;
     grid-column: 2;
     grid-row: 1;
 }
 
 #b3 {
+    background-color: #A5CE78;
     grid-column: 3;
     grid-row: 1;
 }
