--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     display: grid;
     justify-content: center;
     grid-template-columns: 30% 30% 30%;
-    grid-template-rows: 100px;
+    grid-template-rows: 100px 100px;
     grid-gap: 10px;
     padding: 20px 20px;
 }
@@ -36,5 +36,26 @@ h1 {
     background-color: #A5CE78;
     grid-column: 3;
     grid-row: 1;
+    border-radius: 15px;
+}
+
+#b4 {
+    background-color: #A5CE78;
+    grid-column: 1;
+    grid-row: 2;
+    border-radius: 15px;
+}
+
+#b5 {
+    background-color: #A5CE78;
+    grid-column: 2;
+    grid-row: 2;
+    border-radius: 15px;
+}
+
+#b6 {
+    background-color: #A5CE78;
+    grid-column: 3;
+    grid-row: 2;
     border-radius: 15px;
 }
