--- a/style.css
+++ b/style.css
@@ -47,14 +47,14 @@ h1 {
 }
 
 #b5 {
-    background-color: #A5CE78;
+    background-color: #DEA6A8;
     grid-column: 2;
     grid-row: 2;
     border-radius: 15px;
 }
 
 #b6 {
-    background-color: #A5CE78;
+    background-color: #ABDAFC;
     grid-column: 3;
     grid-row: 2;
     border-radius: 15px;
